added meta datas

--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+<!-- Google Tag Manager -->
+<script>
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N5454VZ');
+</script>
+<!-- End Google Tag Manager → -->
+        
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Crayon'd">
-    <meta name="Description" content="Crayon'd helps startups and enterprises launch their ideas and dreams into products and grow">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
-    <title>Crayon'd</title>
+
+    <title>Crayon'd | Breathe Life Into Your Product idea</title> 
+    <meta name="description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.">
+    <link rel="canonical" href="https://www.crayond.com/"/>
+
+    <!-- Og meta dates -->
+    <meta property="og:type" content="website" /> 
+    <meta property="og:site_name" content="CRAYOND" /> 
+    <meta property="og:url" content="https://www.crayond.com/"> 
+    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" /> 
+    <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
+    <meta property="og:image" content="./images/favicon_crayond.png" />
+    <!-- Twitter mate date     -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@crayondofficial">
+    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
+    <meta name="twitter:image" content="./images/favicon_crayond.png">
+
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon_crayond.png">
@@ -34,9 +62,15 @@
     <script src="js/vendor/html5shim.js"></script>
     <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
+
+
+
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- Main header -->
     <div class="header" id="navBar">
         <div class="container">
@@ -46,7 +80,7 @@
                         <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
-                        <span class="activee"><a class="fontLatoRegular" href="/who_we_are">Who we are?</a></span>
+                        <span class="activee"><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
                         <span><a class="fontLatoRegular" href="/">Products</a></span>
                         <span><a class="fontLatoRegular" href="/">Pricing</a></span>
                         <span><a class="fontLatoRegular" href="/">Blogs</a></span>
@@ -190,8 +224,7 @@
                     </h1>
                     <img alt="line-3" src="./images/line-3.png" />
                     <p class="banner--text fontLatoRegular">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br/>
-                        tempor incididunt .
+                        We are creators at heart. For each new product we craft, we offer innovation,<br/> creativity and user friendly design.
                     </p>
                 </div>
             </div>
@@ -204,7 +237,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Design products your customers love</h1>
+                            <h1 class="fontGraphikSemibold">Build products your customers love</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <img alt="line-left" src="./images/line-left.png" />
@@ -342,11 +375,11 @@
         <div class="container">
             <div class="text">
                 <h1 class="fontGraphikSemibold">
-                        Our secret to building great products
+                        Our secret
                 </h1>
                 <img alt="line-3" src="./images/line-3.png" />
                 <p class="banner--text fontLatoRegular">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br /> tempor incididunt .
+                        The core pieces that turn a puzzle into a wholesome product.
                 </p>
             </div>
             <div class="row">
@@ -422,9 +455,9 @@
                                 <span class="fa_icon Oval_group_join">
                                     <img alt="group_jon" src="./images/group_jon.svg" />
                                 </span>
-                                <p class="card-title fontGraphikSemibold">Collaboration</p>
+                                <p class="card-title fontGraphikSemibold">Mastery</p>
                                 <p class="card-text fontLatoRegular">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
+                                     Our mastery over the ‘how’ and ‘what’ of empathetic development makes us craft only the exceptional for you.
                                 </p>
                             </div>
                         </div>
@@ -625,7 +658,19 @@
         </footer>
     </section>
     <!-- end -->
-
+    <script type=“application/ld+json”> 
+        { “@context”: “https://schema.org“, 
+        “@type”: “Organization”, 
+        “name”: “Crayond”, 
+        “url”: “https://crayond.com/“, 
+        “logo”: “https://kissflow.com/static/kf_images/logo.svg”, 
+        “sameAs”: [ 
+        “https://www.facebook.com/CrayonDigital//“, 
+        “https://twitter.com/crayondofficial”, 
+        “https://www.instagram.com/crayondofficial/”, 
+        “https://www.linkedin.com/company/crayond/“, 
+        “https://crayond.com” ] }
+        </script>
 </body>
 <script src="./plugin/jquery.min.js"></script>
 <script src="./plugin/bootstrap.min.js"></script>
