--- a/opportunities.html
+++ b/opportunities.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
+  
 <head>
+<!-- Google Tag Manager -->
+<script>
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N5454VZ');
+</script>
+<!-- End Google Tag Manager → -->
+
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Crayon'd">
-  <meta name="Description" content="Crayon'd helps startups and enterprises launch their ideas and dreams into products and grow">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="theme-color" content="#334ac0">
+
   <!-- Fav Icon  -->
-	<link rel="shortcut icon" href="images/favicon_crayond.png">
+  <link rel="shortcut icon" href="images/favicon_crayond.png">
+  
 	<!-- Site Title  -->
-  <title>Crayon'd - Product Idea to Life</title>
-	<!--Bootstrap  CSS -->  
+  <title>Join Crayon'd -  Give life to New Product Ideas</title> 
+  <meta name="description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.">
+  <link rel="canonical" href="https://www.crayond.com/opportunities"/>
+
+  <!-- Og meta dates -->
+  <meta property="og:type" content="website" /> 
+  <meta property="og:site_name" content="CRAYOND" /> 
+  <meta property="og:url" content="https://www.crayond.com/opportunities"> 
+  <meta property="og:title" content="Join Crayon'd -  Give life to New Product Ideas" /> 
+  <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
+  <meta property="og:image" content="./images/favicon_crayond.png" />
+  
+  <!-- Twitter mate date     -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@crayondofficial">
+  <meta name="twitter:title" content="Join Crayon'd -  Give life to New Product Ideas">
+  <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
+  <meta name="twitter:image" content="./images/favicon_crayond.png">
+
+  <!--Bootstrap  CSS -->  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <!-- Font Awesome icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,7 +66,9 @@
 <style type="text/css">
 </style>
 <body data-spy="scroll" data-target="#mainnav" data-offset="80">
-  
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <!-- Main header -->
   <div class="header" id="navBar">
       <div class="container">
@@ -46,7 +80,7 @@
                       </a>
                   </div>
                   <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
-                      <span class=""><a class="fontLatoRegular" href="/who_we_are">Who we are?</a></span>
+                      <span class=""><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
                       <span><a class="fontLatoRegular" href="/">Products</a></span>
                       <span><a class="fontLatoRegular" href="/">Pricing</a></span>
                       <span><a class="fontLatoRegular" href="/">Blogs</a></span>
@@ -605,6 +639,7 @@
   </section>
   <!-- end -->
   <!-- End Section --> 
+</body>
   <!-- Bootstrap script -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
