--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <meta property="og:url" content="https://www.crayond.com/"> 
     <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" /> 
     <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
-    <meta property="og:image" content="./images/favicon_crayond.png" />
+    <meta property="og:image" content="./images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
     <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
     <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
-    <meta name="twitter:image" content="./images/favicon_crayond.png">
+    <meta name="twitter:image" content="./images/OGImage.jpg">
 
 
     <!-- favicon -->
@@ -81,10 +81,10 @@
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
                         <span class="activee"><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
-                        <span><a class="fontLatoRegular" href="/">Products</a></span>
-                        <span><a class="fontLatoRegular" href="/">Pricing</a></span>
-                        <span><a class="fontLatoRegular" href="/">Blogs</a></span>
+                        <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
+                        <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
                         <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
+                        <span><a class="fontLatoRegular" href="/">Blogs</a></span>
                         <span><a class="fontLatoRegular" href="/">Contact</a></span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
@@ -175,7 +175,7 @@
                                 <p class="card--text fontLatoRegular">
                                     If you have an awesome product idea, we can build you a world-class product guaranteed to fit your dream.
                                 </p>
-                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
+                                <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
                             </div>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                                 <p class="card--text fontLatoRegular">
                                     If you’re looking for ways to improve an existing product, our cutting edge technology can set you apart.
                                 </p>
-                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
+                                <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
                             </div>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                                 <p class="card--text fontLatoRegular">
                                         Want to focus on improving existing products and reaching unexplored markets? Leave your next product to us!
                                 </p>
-                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
+                                <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
                             </div>
                         </div>
                     </div>
@@ -658,6 +658,7 @@
         </footer>
     </section>
     <!-- end -->
+</body>
     <script type=“application/ld+json”> 
         { “@context”: “https://schema.org“, 
         “@type”: “Organization”, 
@@ -671,7 +672,6 @@
         “https://www.linkedin.com/company/crayond/“, 
         “https://crayond.com” ] }
         </script>
-</body>
 <script src="./plugin/jquery.min.js"></script>
 <script src="./plugin/bootstrap.min.js"></script>
 <script src="./plugin/aos.js"></script>
