--- a/opportunities.html
+++ b/opportunities.html
@@ -35,14 +35,14 @@
   <meta property="og:url" content="https://www.crayond.com/opportunities"> 
   <meta property="og:title" content="Join Crayon'd -  Give life to New Product Ideas" /> 
   <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
-  <meta property="og:image" content="./images/favicon_crayond.png" />
+  <meta property="og:image" content="./images/OGImage.jpg" />
   
   <!-- Twitter mate date     -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@crayondofficial">
   <meta name="twitter:title" content="Join Crayon'd -  Give life to New Product Ideas">
   <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
-  <meta name="twitter:image" content="./images/favicon_crayond.png">
+  <meta name="twitter:image" content="./images/OGImage.jpg">
 
   <!--Bootstrap  CSS -->  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -81,10 +81,10 @@
                   </div>
                   <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
                       <span class=""><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
-                      <span><a class="fontLatoRegular" href="/">Products</a></span>
-                      <span><a class="fontLatoRegular" href="/">Pricing</a></span>
-                      <span><a class="fontLatoRegular" href="/">Blogs</a></span>
+                      <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
+                      <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
                       <span class="active"><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
+                      <span><a class="fontLatoRegular" href="/">Blogs</a></span>
                       <span><a class="fontLatoRegular" href="/">Contact</a></span>
                   </div>
                   <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
