--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <meta property="og:url" content="https://www.crayond.com/"> 
     <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" /> 
     <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
-    <meta property="og:image" content="./images/OGImage.jpg" />
+    <meta property="og:image" content="https://jolly-kepler-e8bfc6.netlify.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
     <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
     <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
-    <meta name="twitter:image" content="./images/OGImage.jpg">
+    <meta name="twitter:image" content="https://jolly-kepler-e8bfc6.netlify.com/images/OGImage.jpg">
 
 
     <!-- favicon -->
