added mobile menu and slider in who we are page

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="row" style="padding-top: 6%;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="fa_icon" style="background-color: #002ee5;">
+                            <div class="fa_icon" style="background-color: #E0E4FA;">
                                 <img alt="monitor" src="./images/monitor.svg" />
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="fa_icon">
+                            <div class="fa_icon" style="background-color: #FFF3E4;">
                                 <img alt="setting" src="./images/setting.svg" />
                             </div>
                         </div>
@@ -301,7 +301,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="fa_icon" style="background-color: #ff2695;">
+                            <div class="fa_icon" style="background-color: #FAE5EF">
                                 <img alt="startup" src="./images/startup.svg" />
                             </div>
                         </div>
@@ -340,7 +340,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="fa_icon" style="background-color: #00d890;">
+                            <div class="fa_icon" style="background-color: #E5FBF3">
                                 <img alt="group 6" src="./images/group-6.svg" />
                             </div>
                         </div>
@@ -550,9 +550,9 @@
                     <p class="fontGraphikRegular">All rights reserved</p>
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <a href="./careers.html"  alt="Company" style="color: unset;">
+                    <a href="/who-we-are"  alt="Company" style="color: unset;">
                         <span class="fontLatoBold footer_menu">
-                            Company
+                                Who we are
                         </span>
                     </a>
                     <!-- <ul>
@@ -563,9 +563,9 @@
                     </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <a href="./careers.html"  alt="Company" style="color: unset;">
+                    <a href="/opportunities"  alt="Company" style="color: unset;">
                      <span class="fontLatoBold  footer_menu">
-                        Solutions
+                            Opportunities
                      </span>
                     </a>
                     <!-- <ul>
@@ -576,9 +576,9 @@
                     </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <a href="./careers.html"  alt="Company" style="color: unset;">
+                    <a href="https://medium.com/crayond" target="_blank"  alt="Company" style="color: unset;">
                      <span class="fontLatoBold footer_menu">
-                        Resources
+                        Blogs
                      </span>
                      </a>
                     <!-- <ul>
@@ -588,9 +588,9 @@
                     </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <a href="./careers.html"  alt="Company" style="color: unset;">
+                    <a href="/contact"  alt="Company" style="color: unset;">
                      <span class="fontLatoBold footer_menu">
-                        Products
+                            Contact
                     </span>
                     </a>
                     <!-- <ul>
