--- a/opportunities.html
+++ b/opportunities.html
@@ -530,9 +530,9 @@
                   <p class="fontGraphikRegular">All rights reserved</p>
               </div>
               <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                  <a href="./careers.html"  alt="Company" style="color: unset;">
+                  <a href="/who-we-are"  alt="Company" style="color: unset;">
                       <span class="fontLatoBold footer_menu">
-                          Company
+                          Who we are
                       </span>
                   </a>
                   <!-- <ul>
@@ -543,9 +543,9 @@
                   </ul> -->
               </div>
               <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                  <a href="./careers.html"  alt="Company" style="color: unset;">
+                  <a href="/opportunities"  alt="Company" style="color: unset;">
                    <span class="fontLatoBold  footer_menu">
-                      Solutions
+                      Opportunities
                    </span>
                   </a>
                   <!-- <ul>
@@ -556,9 +556,9 @@
                   </ul> -->
               </div>
               <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                  <a href="./careers.html"  alt="Company" style="color: unset;">
+                  <a href="https://medium.com/crayond"  alt="Blogs" target="_blank" style="color: unset;">
                    <span class="fontLatoBold footer_menu">
-                      Resources
+                      Blogs
                    </span>
                    </a>
                   <!-- <ul>
@@ -568,9 +568,9 @@
                   </ul> -->
               </div>
               <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                  <a href="./careers.html"  alt="Company" style="color: unset;">
+                  <a href="/contact"  alt="Company" style="color: unset;">
                    <span class="fontLatoBold footer_menu">
-                      Products
+                      Contact
                   </span>
                   </a>
                   <!-- <ul>
