added mobile menu and slider in who we are page all

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -621,6 +621,36 @@
                             "date": "JAN 2016",
                             "dis": "We inducted few more fresh minds with the hope of a shoot at our great ambitions. We seemed to have gained pace more than what we did earlier. The grand plans were back to the drawing board, trying to align everyone."
                         }
+                    ],
+                    "2017": [
+                        {
+                            "date":"SEP 2017",
+                            "dis":"Most startups don't make it past 6 months. Few do, but many don't make it past 5 years. We did, but we were challenged. An year of customer defaults squeezed us with cash crunch. After all, we fought all the way being bootstrapped. We wish all our cusomers had more empathy. It's hard when you don't even recognize your 5th anniversary. It was painful, but one of those moments that will build your grit"
+                        },
+                        {
+                            "date":"DEC 2017",
+                            "dis":"It brought us to a new low and our team had shrunk and whoever stayed back were just hanging by a thread with their own apprehensions. The funny thing about the whole episode is that we were always filled with opportunities, just that we did not have people who recognized it. Well, how unlucky they were not to see the big picture."
+                        }
+                    ],
+                    "2018": [
+                        {
+                            "date":"JAN 2018",
+                            "dis":"Adversity is never new for the founder or the brand Crayon'd. After all, Crayon'd itself was born out of adversity. However, the question was 'Is there something left in the tank to rebuild?'. The silent roar was a BIG YES."
+                        },
+                        {
+                            "date":"APR 2018",
+                            "dis":"We stabilized and were moving but not where we wanted to go. We realized we had to load ourselves with tons of aspiration. As they say, 'Larger the dream, greater the team'. The quest to build the dream team began! The next bunch of people came on board with full of life and aspirations. Crayon'd breathed a new life and the floor was on fire."
+                        }
+                    ],
+                    "2019": [
+                        {
+                            "date":"NOV 2019",
+                            "dis":"Over the last 18 months, we focussed on our craft of building products and creating a culture that's worth celebrating. We are a team of ordinary people but with extra-ordinary ambitions. Step in to our space, we'll sweep you off the feet with our aspirations. Watch out for us while we disrupt the world in a gentle way with our creations!"
+                        },
+                        {
+                            "date":"DEC 2019",
+                            "dis":"Watch out for the creations from this young team who is ready to take on the world. Let's simply say, 'The best way to predict the future is to create it!'"
+                        }
                     ]
                     }
         debugger
