--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <!-- loader section -->
+    <section id="pre-loader">
+        <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
+    </section>
     <!-- Main header -->
     <div class="header" id="navBar">
         <div class="container">
@@ -677,7 +681,9 @@
 <script src="./plugin/aos.js"></script>
 <script type="text/javascript">
     AOS.init();
-
+    window.addEventListener("load",function(){
+        $('#pre-loader').fadeOut("500");
+    });
     // Hide Header on on scroll down
     var didScroll;
     var lastScrollTop = 0;
