--- a/index.html
+++ b/index.html
@@ -124,10 +124,8 @@
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner__button_div">
                 <button class="banner_button fontLatoBlack">
-                    <span>
-                            SCREW IT, LET'S DO IT! &nbsp 
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </span></button>
+                    <span>SCREW IT, LET'S DO IT! &nbsp<i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </button>
             </div>
         </div>
     </section>
