--- a/who-we-are.html
+++ b/who-we-are.html
@@ -196,7 +196,7 @@
                 <h1 class="fontGraphikSemibold">
                         About Crayon’d
                 </h1>
-                <img alt="line 2" src="./images/line-2.png" />
+                <img alt="line 2" class="divider_line" src="./images/line-2.png" />
                 <!-- <p class="banner--text fontLatoRegular">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
                 </p> -->
@@ -241,36 +241,14 @@
                             </a>
                         </div>
                     </div> -->
-                    <div class="carousel-item active">
+                    <!-- <div class="carousel-item active">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">
                             <p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">AUG 2012</p>
-                            <!-- <h1 class="fontGraphikSemibold titel" >Tagline</h1> -->
+                            <h1 class="fontGraphikSemibold titel" >Tagline</h1>
                             <img alt="line 2" src="./images/line-left.png" />
                             <p class="fontLatoRegular diccription" >Our quest began over 100 lines of chat. We dreamt big starting from creating a unique brand, strong culture, wonderful people. We even planned our outfits, looked around for space and zeroed in on SP Info City. We envisioned our ambience and had it covered as well all at a budget not leaving out bean bags. We were raring to give it a shot.</p>   
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">
-                            <p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">SEP 2012</p>
-                            <img alt="line 2" src="./images/line-left.png" />
-                            <p class="fontLatoRegular diccription" >Reality struck as our heart was full but our pockets were empty. And, we were all about product and sweating on investors. We were so unsure about how to proceed. We bought a cafe moments card to atleast gain some miles for all the coffee.</p>   
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">
-                            <p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">SEP 17 2012</p>
-                            <img alt="line 2" src="./images/line-left.png" />
-                            <p class="fontLatoRegular diccription" >Where there is a will, there is a way! We decided to bootstrap. We couldn't afford an office so we shared a space with a kind enough friend. Crayon'd started its journey with 3 of us at the helm. The excitement and emotion is hard to explain.</p>   
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">
-                            <p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">SEP 2012</p>
-                            <img alt="line 2" src="./images/line-left.png" />
-                            <p class="fontLatoRegular diccription" >Our 1st Client arrived. Thanks to our well-wisher who passed on a reference to us.</p>   
-                        </div>
-                    </div>
-                    
+                    </div> -->
                 </div>
                 <div class="row arrows">
                     <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 arrowslist">
@@ -303,7 +281,7 @@
                 </div>     
             </div>
         </div>
-        <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 time_line_list">
+        <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 time_line_list" style="overflow: auto;">
             <span class="time_line_years active" id="2012_timeline" data-title="2012" >2012</span>
             <span class="time_line_years" id="2013_timeline" data-title="2013">2013</span>
             <span class="time_line_years" id="2014_timeline" data-title="2014">2014</span>
@@ -323,7 +301,7 @@
                 <h1 class="fontGraphikSemibold">
                         Our Culture
                 </h1>
-                <img alt="line 2" src="./images/line-2.png" />
+                <img alt="line 2" class="divider_line" src="./images/line-2.png" />
                 <p class="banner--text fontLatoRegular">
                     To be renowned as a brand that constantly innovates,<br/> strives for excellence, transforms people into influential leaders.
                 </p>
@@ -344,7 +322,7 @@
                 <h1 class="fontGraphikSemibold">
                         Our Team
                 </h1>
-                <img alt="line 2" src="./images/line-2.png" />
+                <img alt="line 2" class="divider_line" src="./images/line-2.png" />
                 <!-- <p class="banner--text fontLatoRegular">
                     To be renowned as a brand that constantly innovates,<br/> strives for excellence, transforms people into influential leaders.
                 </p> -->
@@ -662,7 +640,7 @@
             var html4 = '<div class="carousel-item active">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
-                            '<img alt="line 2" src="./images/line-left.png" />'+
+                            '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
                     '</div>';
@@ -671,7 +649,7 @@
         var html4 = '<div class="carousel-item">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
-                            '<img alt="line 2" src="./images/line-left.png" />'+
+                            '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
                     '</div>';
@@ -697,7 +675,7 @@
             var html4 = '<div class="carousel-item active">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
-                            '<img alt="line 2" src="./images/line-left.png" />'+
+                            '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
                     '</div>';
@@ -706,7 +684,7 @@
         var html4 = '<div class="carousel-item">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
-                            '<img alt="line 2" src="./images/line-left.png" />'+
+                            '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
                     '</div>';
