loader added in all pages

--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,9 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <section id="pre-loader">
+        <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
+    </section>
     <!-- Main header -->
     <div class="header" id="navBar">
         <div class="container">
@@ -241,6 +244,7 @@
 <script src="./plugin/jquery.min.js"></script>
 <script src="./plugin/bootstrap.min.js"></script>
 <script src="./plugin/aos.js"></script>
+<script src="./plugin/loader.js"></script>
 <script type="text/javascript">
     AOS.init();
 
