--- a/index.html
+++ b/index.html
@@ -677,11 +677,9 @@
 <script src="./plugin/jquery.min.js"></script>
 <script src="./plugin/bootstrap.min.js"></script>
 <script src="./plugin/aos.js"></script>
+<script src="./plugin/loader.js"></script>
 <script type="text/javascript">
     AOS.init();
-    window.addEventListener("load",function(){
-        $('#pre-loader').fadeOut("500");
-    });
     // Hide Header on on scroll down
     var didScroll;
     var lastScrollTop = 0;
