--- a/opportunities.html
+++ b/opportunities.html
@@ -69,6 +69,10 @@
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  
+  <section id="pre-loader">
+    <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
+  </section>  
   <!-- Main header -->
   <div class="header" id="navBar">
       <div class="container">
@@ -644,7 +648,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="./plugin/aos.js"></script>
-
+  <script src="./plugin/loader.js"></script>
   <script type="text/javascript">
     AOS.init();
     $(document).ready(function(){ 
